2006-11-16  Kjartan Maraas  <kmaraas@gnome.org>

	* drivemount.c: (applet_factory): Add an accessible name
	to the applet. Rodney Dawes, closes bug #373034.

2006-11-15  Kjartan Maraas  <kmaraas@gnome.org>

	* help/C/drivemount.xml: Fix build.

2006-08-07  Davyd Madeley  <davyd@madeley.id.au>

	* GNOME_DriveMountApplet.server.in:
	- fix component name in server file. Closes #348845.

2006-02-03  Ryan Lortie  <desrt@desrt.ca>

	* drivemount.c (change_background, applet_factory): Revert a bit
	  of the change to the new background API to resolve a problem
	  found by Michael Hofmann <mh21@piware.de> in bug #329649.
	* drive-button.c (eject_drive): Correct typo to display eject error
	  message (not unmount) in case of failure to eject.
	  (drive_button_ensure_popup): Always display an 'eject' item for
	  drives which support this action (even with no media in drive).

2006-01-27  Ryan Lortie  <desrt@desrt.ca>

	* drivemount.c (change_background, applet_factory): Move to the new
	  libpanel-applet API for background handling.

2005-11-26  Ryan Lortie  <desrt@desrt.ca>

	* drivemount.c (display_about_dialog):  Change "translator_credits" to
	  "translator-credits" as per bug #314604.

2005-11-07  Davyd Madeley  <davyd@madeley.id.au>

	* drive-button.c: scale images so that they don't exploderise the
	  panel. Patch from Michael Hofmann <mh21@piware.de>. Closes #319122.

2005-10-01  Ryan Lortie  <desrt@desrt.ca>

	* drive-button.c: Fall back to volume activation URI when drive
	  activation URI is not defined.  Closes bug #315587.

	Vendor patch from Ubuntu by James Henstridge <jamesh@canonical.com>

2005-10-01  Ryan Lortie  <desrt@desrt.ca>

	* drive-list.c: ensure button relief is set on newly-created drives.

2005-09-28  Ryan Lortie  <desrt@desrt.ca>

	* help/Makefile.am: add DOC_FIGURES list to get .png's into the
	  tarball.  Closes bug #317476.

2005-09-01  Davyd Madeley  <davyd@madeley.id.au>

	* docs/*: removed