@@ -1,3 +1,8 @@
+2007-02-25  Davyd Madeley  <davyd@madeley.id.au>
+
+	* drive-button.c: Handle icon theme changes. Fixes #339006.
+	  Based on a patch from Jesse Stockall  <jesse@cleverone.org>.
+
 2006-11-16  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* drivemount.c: (applet_factory): Add an accessible name
